# Biome

./: .gitattributes  .gitignore  CONTRIBUTING.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: architecture.md  livepeer-live-runner-plan.md  localisation.md  logging.md  websocket-protocol.md
electron/ipc/: debug.ts  engine.ts  models.ts  server.ts  settings.ts
electron/lib/: logRecord.ts  logger.ts  paths.ts  serverFiles.ts
scripts/: appimage-prepare-assets.mjs  release.mjs
server-components/: .gitignore  Dockerfile.live-runner  Dockerfile.runner-server  README.md  main.py  pyproject.toml
server-components/engine/: devices.py  keymap.py  manager.py  safety.py  scene_authoring.py
server-components/recording/: action_logger.py  video_recorder.py
server-components/scripts/: codegen_ts.py
server-components/server/: caches.py  livepeer_runtime.py  protocol.py  routes.py  startup.py
server-components/server/session/: connection.py  handlers.py  workers.py
server-components/util/: hf_token.py  server_logging.py  system_info.py
src/: App.tsx  stages.ts
src/components/: AudioController.tsx  ConnectionLostOverlay.tsx  EngineInstallModal.tsx  FrameTimelineOverlay.tsx  I18nSync.tsx  InputOverlay.tsx  MenuSettingsView.tsx  PauseOverlay.tsx  PerformanceStatsOverlay.tsx  SceneEditOverlay.tsx  ServerLogDisplay.tsx  TerminalDisplay.tsx  VideoContainer.tsx  WindowControls.tsx
src/components/audio/: AudioController.tsx
src/components/debug/: DevLocaleCycler.tsx  FrameTimelineOverlay.tsx  InputOverlay.tsx  PerformanceStatsOverlay.tsx  PortalSparksConfigurator.tsx
src/components/engine/: EngineInstallModal.tsx  EngineSection.tsx  ServerLogDisplay.tsx  TerminalDisplay.tsx  WorldEngineSection.tsx
src/components/input/: VirtualGamepad.tsx
src/components/menu/: BackgroundSlideshow.tsx  PortalPreview.tsx  SocialCtaRow.tsx
src/components/pause/: PauseMainView.tsx  PauseOverlay.tsx
src/components/portal/: PortalSparks.tsx  VortexHost.tsx
src/components/scene/: SceneAuthoringPrompt.tsx  SceneCard.tsx  SceneCardAddButton.tsx  SceneCardBase.tsx  SceneEditOverlay.tsx  SceneGrid.tsx
src/components/settings/: DebugTab.tsx  EngineTab.tsx  GamepadTab.tsx  GeneralTab.tsx  KeyboardTab.tsx  MenuSettingsView.tsx
src/components/startup/: StartupLoader.tsx
src/components/streaming/: ConnectionLostOverlay.tsx  VideoContainer.tsx
src/components/ui/: Modal.tsx  RawButton.tsx  SettingsCheckbox.tsx  SettingsKeybind.tsx  SettingsSelect.tsx  Slider.tsx
src/context/: StreamingContext.tsx  streamingContextTypes.ts  streamingLifecycleEffects.ts
src/context/audio/: AudioContext.tsx  audioContextValue.ts
src/context/engineLifecycle/: EngineLifecycleContext.tsx  engineLifecycleContextValue.ts
src/context/focus/: FocusScopeContext.tsx  focusScopeStack.ts
src/context/portal/: PortalContext.tsx  portalContextValue.ts
src/context/startup/: StartupContext.tsx  startupContextValue.ts
src/context/streaming/: StreamingContext.tsx  StreamingProviders.tsx  connection.ts  createStreamingContext.ts  engine.ts  frames.ts  input.ts  seeds.ts  session.ts  sessionConfig.ts  streamingLifecycleEffects.ts  streamingLifecycleMachine.ts  streamingLifecyclePayload.ts  streamingWarmConnection.ts  surface.ts  useInputLoop.ts  websocket.ts
src/context/vortex/: VortexContext.tsx  vortexContextValue.ts
src/hooks/: useEngine.ts  useEngineApi.ts  useEngineLogs.ts  usePointerLockFeedback.ts  useSceneActions.ts  useSceneGeneration.ts  useSeedsDir.ts  useWebSocket.ts
src/hooks/audio/: useUISound.ts  useVolumeControls.ts
src/hooks/engine/: useEngineApi.ts  useEngineLogs.ts  useWebSocket.ts
src/hooks/input/: useGameInput.ts  useGamepadNavigation.ts  usePointerLockFeedback.ts
src/hooks/portal/: usePortalAnimator.ts  usePortalMediaMount.ts
src/hooks/scene/: useBackgroundCycle.ts  useSceneActions.ts  useSceneGeneration.ts  useSceneOrder.ts
src/hooks/seeds/: useSeedManager.ts  useSeedsDir.ts
src/hooks/settings/: settingsContextValue.ts  useSettings.tsx
src/hooks/streaming/: useClampedSettings.ts  useConnectionActions.ts  useEngineRespawn.ts  useFramePacer.ts  useFrameRenderer.ts  useInputLoop.ts  useLoadingFailureCleanup.ts  usePauseState.ts  usePointerLock.ts  useSceneEdit.ts  useSessionInit.ts  useStreamingLifecycle.ts  useWarmConnection.ts
src/i18n/: en.ts  goose.ts  he.ts  ja.ts  zh.ts
src/lib/: diagnosticsPayload.ts  wsRpc.ts
src/types/: ipc.ts  protocol.generated.ts  settings.ts
src/utils/: settingsClassifier.ts
