[project]
name = "biome-server"
version = "1.1.0-rc2"
requires-python = "==3.12.*"
dependencies = [
  "world-engine @ https://github.com/Overworldai/world_engine/archive/refs/tags/1.5.5.zip",
  # torch/torchvision are pulled in transitively by world-engine, but we must list
  # them directly so that [tool.uv.sources] below routes them through the cu128
  # index. uv only applies `sources` overrides to direct dependencies — transitive
  # deps resolve against regular indexes, and since our cu128 index is marked
  # `explicit = true`, torch would otherwise fall back to PyPI (which serves the
  # default cu130 build). Keep these pins in sync with world-engine.
  "torch==2.11.0",
  "torchvision==0.26.0",
  "pillow==12.2.0",
  "fastapi==0.135.3",
  "uvicorn==0.44.0",
  "websockets==16.0",
  "hf-xet==1.4.3",
  "timm==1.0.26",
  "py-cpuinfo==9.0.0",
  "nvidia-ml-py==13.595.45",
  "psutil==7.1.3",
  "simplejpeg==1.9.0",
  "accelerate==1.12.0",
  "bitsandbytes==0.49.2",
  "llama-cpp-python==0.3.36",
  "gguf>=0.10.0",
  "imageio-ffmpeg==0.6.0",
]

[dependency-groups]
dev = []

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
override-dependencies = [
  "triton==3.6.0; sys_platform == 'linux'",
  "triton-windows==3.6.0.post26; sys_platform == 'win32'",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
llama-cpp-python = [
  { url = "https://github.com/JamePeng/llama-cpp-python/releases/download/v0.3.36-cu128-Basic-linux-20260416/llama_cpp_python-0.3.36%2Bcu128.basic-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
  { url = "https://github.com/JamePeng/llama-cpp-python/releases/download/v0.3.36-cu128-Basic-win-20260417/llama_cpp_python-0.3.36%2Bcu128.basic-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
