[project]
name = "biome-server"
version = "1.1.0-rc2"
requires-python = "==3.12.*"
dependencies = [
  "world-engine @ https://github.com/Overworldai/world_engine/archive/refs/tags/1.5.5.zip",
  # torch/torchvision are pulled in transitively by world-engine, but we must list
  # them directly so that [tool.uv.sources] below routes them through the cu128
  # index. uv only applies `sources` overrides to direct dependencies — transitive
  # deps resolve against regular indexes, and since our cu128 index is marked
  # `explicit = true`, torch would otherwise fall back to PyPI (which serves the
  # default cu130 build). Keep these pins in sync with world-engine.
  "torch==2.11.0",
  "torchvision==0.26.0",
  "pillow==12.2.0",
  "fastapi==0.135.3",
  "pydantic==2.13.1",
  "uvicorn==0.44.0",
  "websockets==16.0",
  "hf-xet==1.4.3",
  "timm==1.0.26",
  "py-cpuinfo==9.0.0",
  "nvidia-ml-py==13.595.45; sys_platform != 'darwin'",
  "psutil==7.1.3",
  "simplejpeg==1.9.0",
  "accelerate==1.12.0",
  "bitsandbytes==0.49.2; sys_platform != 'darwin'",
  "llama-cpp-python==0.3.36; sys_platform != 'darwin'",
  "gguf>=0.10.0; sys_platform != 'darwin'",
  "imageio-ffmpeg==0.6.0",
  "structlog==25.5.0",
  # Quark inference backend, used on every platform. ``Engine`` is a
  # drop-in for ``world_engine.WorldEngine`` / ``MLXWorldEngine`` and
  # dispatches to ``EngineCUDA`` (Linux / Windows) or ``EngineMetal``
  # (Apple Silicon) via its ``__new__`` factory. ``[engine]`` brings
  # in torch / Pillow / PyYAML / einops + ``quark[taehv]``
  # (coremltools + huggingface_hub) — all already transitively
  # present in Biome's deps, no new top-level surface.
  "quark[engine]",
]

[dependency-groups]
dev = []

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
override-dependencies = [
  "triton==3.6.0; sys_platform == 'linux'",
  "triton-windows==3.6.0.post26; sys_platform == 'win32'",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
llama-cpp-python = [
  { url = "https://github.com/JamePeng/llama-cpp-python/releases/download/v0.3.36-cu128-Basic-linux-20260416/llama_cpp_python-0.3.36%2Bcu128.basic-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
  { url = "https://github.com/JamePeng/llama-cpp-python/releases/download/v0.3.36-cu128-Basic-win-20260417/llama_cpp_python-0.3.36%2Bcu128.basic-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
]
# Pins to a commit on Quark main. Bump the rev to update.
quark = { git = "https://github.com/Overworldai/quark.git", rev = "e2a14aab7c7ce47b40d412b0848ca9b202f6d9b3" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "F",    # pyflakes
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "A",    # flake8-builtins
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "PIE",  # flake8-pie
  "TC",   # flake8-type-checking
  "ICN",  # flake8-import-conventions
  "ARG",  # flake8-unused-arguments
  "FBT",  # flake8-boolean-trap (Rust-style: keyword-only bools)
  "BLE",  # flake8-blind-except
  "DTZ",  # flake8-datetimez
  "ASYNC",# flake8-async
  "TRY",  # tryceratops (exception handling patterns)
  "RUF",  # ruff-specific
  "PLE",  # pylint errors
  "PLW",  # pylint warnings
  "PERF", # perflint
]
ignore = []

[tool.basedpyright]
include = ["."]
exclude = [".venv", "__pycache__", "build", "dist"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "strict"
